# YpsilantisRenderingEngine

./: .gitignore  CMakeLists.txt  README.md
data/: save_data.json
dependencies/imgui/include/imgui/: ImGuizmo.cpp  imgui.cpp  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imoguizmo.hpp
dependencies/stb/: CMakeLists.txt
dependencies/tiny_gltf/: CMakeLists.txt
dependencies/tiny_gltf/src/: tiny_gltf.cc
shaders/: assign_lights_to_clusters.comp  bloom.glsl  bloom_downsample.frag  bloom_prefilter.frag  bloom_upsample.frag  blur_ssao.frag  brdf.glsl  camera_render_data.glsl  capture_bright_pixels.frag  cluster.glsl  color_depth_resolve.frag  cube_data.glsl  cube_vertices.glsl  equirectangular.frag  equirectangular.geom  equirectangular.vert  forward_pass.frag  fullScreenQuad.vert  gen_dir_shadow_map.vert  gen_frustum_clusters.comp  gen_point_shadow_map.frag  gen_point_shadow_map.vert  gen_spot_shadow_map.vert  grid.frag  grid.vert  imageToQuad.frag  integrate_brdf.frag  irradiance_convolution.frag  light_icon.frag  light_icon.vert  lights.glsl  material.glsl  mesh.vert  opaqueShading.frag  opaque_shading.frag  pbr.frag  pbr.vert  post_process.frag  prefilter.frag  prepass.frag  (+22 more)
src/: application.cpp  application.hpp  input.cpp  input.hpp  main.cpp  pch.cpp  pch.hpp  utils.cpp  utils.hpp
src/app/: application.cpp  application.hpp  editor.cpp  editor.hpp  save_data.cpp  save_data.hpp  simple_notification_service.cpp  simple_notification_service.hpp  types.hpp  uuid_registry.cpp  uuid_registry.hpp
src/camera/: camera.cpp  camera.hpp
src/editor/: camera.cpp  camera.hpp  editor.cpp  editor.hpp
src/input/: input.hpp
src/renderer/: bounding_box.hpp  camera.cpp  camera.hpp  cubemap_loader.cpp  cubemap_loader.hpp  dynamic_buffer.hpp  equirectangular_map_loader.cpp  equirectangular_map_loader.hpp  importer.cpp  importer.hpp  instancedMesh.cpp  instancedMesh.hpp  instanced_mesh.cpp  instanced_mesh.hpp  lights.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_importer.cpp  model_importer.hpp  renderer.cpp  renderer.hpp  renderer.inl  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp  vertex.hpp
src/renderer/importer/: importer.cpp  importer.hpp  loaded_resource.hpp  model_importer.cpp  model_importer.hpp  scene.hpp
src/renderer/loaders/: cubemap_loader.hpp
src/resource/: loaded_resource.hpp  resource_importer.cpp  resource_importer.hpp  resource_manager.cpp  resource_manager.hpp
src/scene_graph/: graph_node.cpp  graph_node.hpp  light_node.cpp  light_node.hpp  mesh_node.cpp  mesh_node.hpp  scene_graph.cpp  scene_graph.hpp  scene_node.cpp  scene_node.hpp
src/utils/: image_loader.cpp  image_loader.hpp  loaded_image.cpp  loaded_image.hpp  main_thread_task_queue.cpp  main_thread_task_queue.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/vk/: include.hpp  instance.cpp  instance.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_descriptor.cpp  vulkan_descriptor.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_function_pointers.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_imgui.cpp  vulkan_imgui.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render_device.cpp  vulkan_render_device.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_texture.cpp  vulkan_texture.hpp  vulkan_utils.cpp  vulkan_utils.hpp
src/window/: event.hpp  input.cpp  input.hpp  window.cpp  window.hpp
